--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 # mypkg
 
 <!-- badges: start -->
+[![Travis build status](https://travis-ci.org/fcheysson/mypkg.svg?branch=master)](https://travis-ci.org/fcheysson/mypkg)
 <!-- badges: end -->
 
 The goal of mypkg is to AMAAAAAAAAZING GRAAAAAAACE!!!!!
